--- a/src/styles.css
+++ b/src/styles.css
@@ -153,13 +153,15 @@ hr {
 }
 
 .tag {
+    font-family: 'Open Sans';
     border-radius: 999px;
-    padding: 10px;
-    margin: 5px;
+    padding: 5px 10px;
+    margin: 3px;
+    font-size: 13px;
     background-color: #9866d2;
     color: #ddd !important;
     text-decoration: none;
-    font-weight: 600;
+    font-weight: 300;
 }
 
 details {
@@ -227,4 +229,24 @@ table tr:nth-child(2n) {
     vertical-align: super;
     color: #676767;
     margin: 0px 3px;
+}
+
+::-webkit-scrollbar {
+    background-color: #1a1a1a;
+    border-radius: 0;
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #111;
+    margin: 10px 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #3b3b3b;
+    border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #454545;
 }
