Added Image Caption feature
- Image with title renders as a figure with figcaption
- Errors do not panic and exit code using the `utils::must()` function
- Improvements to the `heading_to_slug()` function

--- a/src/styles.css
+++ b/src/styles.css
@@ -250,3 +250,9 @@ table tr:nth-child(2n) {
 ::-webkit-scrollbar-thumb:hover {
     background: #454545;
 }
+
+figure > figcaption {
+    color: #898989;
+    font-style: italic;
+    padding-left: 25px;
+}
